--- a/index.html
+++ b/index.html
@@ -23,20 +23,19 @@
     </header>
 
     <section class="section">
-        <img class="Image1" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJ4duT-LDtl6f5KnJ8RytC7aFjw1I5FRkPiA&usqp=CAU" alt="Image number 1">
-        <div class="Text Text1">
+        <img class="Image1 grid-item " src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJ4duT-LDtl6f5KnJ8RytC7aFjw1I5FRkPiA&usqp=CAU" alt="Image number 1">
+        <div class="Text Text1 grid-item ">
             <h2>Who are we</h2>
             <p> We are a company where pins with original designs of different themes, cartoons, sports, birthday parties, etc. are sold. And we also have an area of ​​non-profit pins which help ecology, endangered animals, and other areas that help to be a better world.
             </p>
         </div>
-    </section>
 
-    <section class="section2">
-        <div class="Text Text2">
+    
+        <div class="Text Text2 grid-item ">
             <h2>How we Help?</h2>
             <p>Legally established associations are helped, and propaganda is made monthly to help said associations.  The amount collected is given a percentage and the rest will go to producing more pins.</p>
         </div>
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQWQB1LH-sR7Prp50eGIteLJCjRgutJUSPc9g&usqp=CAU" alt="Image number 2">
+        <img class="Image2 grid-item " src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQWQB1LH-sR7Prp50eGIteLJCjRgutJUSPc9g&usqp=CAU" alt="Image number 2">
     </section>
 
     <footer>
