--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="Style/header.css">
     <link rel="stylesheet" href="Style/footer.css">
     <link rel="stylesheet" href="Style/homePage.css">
-    <link rel="stylesheet" href="Style/brgmenu.js">
     <title>Pins HomePage</title>
 </head>
 <body>
@@ -41,7 +40,7 @@
     </header>
 
     <section class="section">
-        <img class="Image1 grid-item " src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJ4duT-LDtl6f5KnJ8RytC7aFjw1I5FRkPiA&usqp=CAU" alt="Image number 1">
+        <img class="Image1 grid-item " src="Images/all.jpg" alt="Image number 1">
         <div class="Text Text1 grid-item ">
             <h2>Who are we</h2>
             <p> We are a company where pins with original designs of different themes, cartoons, sports, birthday parties, etc. are sold. And we also have an area of ​​non-profit pins which help ecology, endangered animals, and other areas that help to be a better world.
