--- a/pins.html
+++ b/pins.html
@@ -6,6 +6,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" type="image/x-icon" href="Images/favicon.ico">
         <link rel="stylesheet" href="Style/pins.css">
         <link rel="stylesheet" href="Style/header.css">
         <link rel="stylesheet" href="Style/footer.css">
