--- a/about.html
+++ b/about.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="Style/about.css">
     <link rel="stylesheet" href="Style/header.css">
     <link rel="stylesheet" href="Style/footer.css">
-    <title>Pins Menu</title>
     <title>About Page</title>
 </head>
 <body>
@@ -45,10 +44,16 @@
     
 
     <section class="About">
-        <h1>Who are We?</h1>
-        <aside class="photo"><img src="Images/perrrrro.png" alt="Image"></aside>
-        <p class="text-about">
+        <h1 class="title">Who are We?</h1>
+        <aside class="Photos photo"><img src="Images/perrrrro.png" alt="Image"></aside>
+        <p class="Texts-About text-about">
             as In addition to selling pins for entertainment purposes, the company also basically has a focus on making a positive impact on the world. We mostly have a particular area or collection of pins that support non-profit causes. We Want these pins mostly to be used as a way for customers to show their support for a really particular cause or organization, or simply to raise awareness and spark conversation about important issues, for all intents and purposes. By combining our passion for creating for all intents and purposes original designs with a commitment to actual social responsibility, this company aims to actually provide customers with a particularly unique shopping experience that allows them to particularly express themselves while also making a particularly positive impact on the world around them in a big way.
+        </p>
+
+        <h1 class="title-2">How we started</h1>
+        <aside class="Photos photo-2"><img src="Images/gato.png" alt="Image"></aside>
+        <p class="Texts-About text-about-2">
+            We embarked on a journey to create a pin company that would not only celebrate the artistry and beauty of pin collections but also makes a meaningful difference in the world. We knew deep down that our passion for pins could extend beyond personal enjoyment and become a force for positive change.
         </p>
     </section>
 
