--- a/pins.html
+++ b/pins.html
@@ -48,9 +48,9 @@
             <li><img src="Images/Pins-Images/dog.png" alt="Pin"><hr><p>These pins help provide animal shelters with everything they need for animals to have a good stay while finding a new home for them.</p></li>
             <li><img src="Images/Pins-Images/Cat.png" alt="Pin"><hr><p>These pins help provide animal shelters with everything they need for animals to have a good stay while finding a new home for them.</p></li>
             <li><img src="Images/Pins-Images/Axolotl.png" alt="Pin"><hr><p>These pins will help provide the foundation with what is necessary to clean up polluted seas and rivers.</p></li>
-            <li><img src="Images/Pins-Images/peresoso.png" alt="Pin"><hr><p>These pins help endangered animal organizations find protected areas or make nature reserves where they can live.</p></li>
+            <li><img src="Images/Pins-Images/peresoso.png" alt="Pin"><hr><p>These pins help the association to provide firefighters with security against fires, as well as to prevent fires and help in the havoc caused by them</p></li>
             <li><img src="Images/Pins-Images/Khoala.png" alt="Pin"><hr><p>These pins help the association to provide firefighters with security against fires, as well as to prevent fires and help in the havoc caused by them</p></li>
-            <li><img src="Images/Pins-Images/pinguin.png" alt="Pin"><hr><p>These Pins helps the association for reforestation and consequences of ecosystems, bringing the necessary support to sustain nurseries and holding days to plant trees.</p></li>
+            <li><img src="Images/Pins-Images/pinguin.png" alt="Pin"><hr><p>These pins help endangered animal organizations find protected areas or make nature reserves where they can live.</p></li>
             <li><img src="Images/Pins-Images/Turtle.png" alt="Pin"><hr><p>These pins will help provide the foundation with what is necessary to clean up polluted seas and rivers.</p></li>
 
             <!-- These pins support the expenses that are required. By the company, and are personalized or souvenirs of an event, such as birthdays, parties or announcements, etc. -->
