--- a/pins.html
+++ b/pins.html
@@ -45,13 +45,13 @@
 
     <section class="PinsCatalog">
         <ul class="PinsList">
-            <li><img src="Images/Pins-Images/dog.png" alt="Pin"><hr><p>These pins help provide animal shelters with everything they need for animals to have a good stay while finding a new home for them.</p></li>
-            <li><img src="Images/Pins-Images/Cat.png" alt="Pin"><hr><p>These pins help provide animal shelters with everything they need for animals to have a good stay while finding a new home for them.</p></li>
-            <li><img src="Images/Pins-Images/Axolotl.png" alt="Pin"><hr><p>These pins will help provide the foundation with what is necessary to clean up polluted seas and rivers.</p></li>
-            <li><img src="Images/Pins-Images/peresoso.png" alt="Pin"><hr><p>These pins help the association to provide firefighters with security against fires, as well as to prevent fires and help in the havoc caused by them</p></li>
-            <li><img src="Images/Pins-Images/Khoala.png" alt="Pin"><hr><p>These pins help the association to provide firefighters with security against fires, as well as to prevent fires and help in the havoc caused by them</p></li>
-            <li><img src="Images/Pins-Images/pinguin.png" alt="Pin"><hr><p>These pins help endangered animal organizations find protected areas or make nature reserves where they can live.</p></li>
-            <li><img src="Images/Pins-Images/Turtle.png" alt="Pin"><hr><p>These pins will help provide the foundation with what is necessary to clean up polluted seas and rivers.</p></li>
+            <li><img src="Images/Pins-Images/dog.png" alt="Pin"><hr><h3>Dog Pin</h3><p>These pins help provide animal shelters with everything they need for animals to have a good stay while finding a new home for them.</p></li>
+            <li><img src="Images/Pins-Images/Cat.png" alt="Pin"><hr><h3>Cat Pin</h3><p>These pins help provide animal shelters with everything they need for animals to have a good stay while finding a new home for them.</p></li>
+            <li><img src="Images/Pins-Images/Axolotl.png" alt="Pin"><hr><h3>Axolotl Pin</h3><p>These pins will help provide the foundation with what is necessary to clean up polluted seas and rivers.</p></li>
+            <li><img src="Images/Pins-Images/peresoso.png" alt="Pin"><hr><h3>Sloth Pin</h3><p>These pins help the association to provide firefighters with security against fires, as well as to prevent fires and help in the havoc caused by them</p></li>
+            <li><img src="Images/Pins-Images/Khoala.png" alt="Pin"><hr><h3>Koala Pin</h3><p>These pins help the association to provide firefighters with security against fires, as well as to prevent fires and help in the havoc caused by them</p></li>
+            <li><img src="Images/Pins-Images/pinguin.png" alt="Pin"><hr><h3>Penguin Pin</h3><p>These pins help endangered animal organizations find protected areas or make nature reserves where they can live.</p></li>
+            <li><img src="Images/Pins-Images/Turtle.png" alt="Pin"><hr><h3>Turtle Pin</h3><p>These pins will help provide the foundation with what is necessary to clean up polluted seas and rivers.</p></li>
 
             <!-- These pins support the expenses that are required. By the company, and are personalized or souvenirs of an event, such as birthdays, parties or announcements, etc. -->
         </ul>
@@ -64,14 +64,14 @@
         <div class="Link">
             
             <a href="index.html">Home Page</a>
-            <a href="pins.html">Pins</a>
-            <a href="about.html">About</a>
-            <a href="contact-us.html">Contact Us</a>
+            <a href="Pins.html">Pins</a>
+            <a href="About.html">About</a>
+            <a href="Contact Us">Contact Us</a>
+            <a href="Copyright.html">Copyright</a>
+
         </div>
         <div class="Social">
-            <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
-            <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a>
-            <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-envelope"></i></a>
+            <a href="https://www.instagram.com/pexepins/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
         </div>
     </footer>
 
