--- a/about.html
+++ b/about.html
@@ -64,14 +64,14 @@
         <div class="Link">
             
             <a href="index.html">Home Page</a>
-            <a href="pins.html">Pins</a>
-            <a href="about.html">About</a>
-            <a href="contact-us.html">Contact Us</a>
+            <a href="Pins.html">Pins</a>
+            <a href="About.html">About</a>
+            <a href="Contact Us">Contact Us</a>
+            <a href="Copyright.html">Copyright</a>
+
         </div>
         <div class="Social">
-            <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
-            <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a>
-            <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-envelope"></i></a>
+            <a href="https://www.instagram.com/pexepins/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
         </div>
     </footer>
 
