--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
         <div class="Link">
             
             <a href="index.html">Home Page</a>
-            <a href="Pins.html">Pins</a>
-            <a href="About.html">About</a>
-            <a href="Contact Us">Contact Us</a>
-            <a href="Copyright.html">Copyright</a>
+            <a href="pins.html">Pins</a>
+            <a href="about.html">About</a>
+            <a href="contact-us">Contact Us</a>
+            <a href="copyright.html">Copyright</a>
 
         </div>
         <div class="Social">
