--- a/copyright.html
+++ b/copyright.html
@@ -45,47 +45,19 @@
 
     <section class="Item">
        <ul>
-        <li>https://unsplash.com/license</li>
-        <li>Photo by eberhard 🖐 grossgasteiger on Unsplash 
-            https://unsplash.com/photos/XAxEp-NKBiQ?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText</li>
-        <li>Photo by G B on Unsplash 
-            https://unsplash.com/photos/_kJBNgNhlg4?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText
-        </li>
-        <li>
-            Photo by Artem Lysenko:  https://www.pexels.com/photo/white-fish-under-water-2168831/ 
-        </li>
-        <li>Photo by Cédric VT on Unsplash 
-            https://unsplash.com/photos/IuJc2qh2TcA?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText
-        </li>
-        <li>
-            Photo by Daniel Olah on Unsplash 
-https://unsplash.com/photos/pCcGpVsOHoo?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink
-
-        </li>
-        <li>
-            Photo by Lukas Tennie on Unsplash 
-https://unsplash.com/photos/23A5RimlfXs?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink
-        </li>
-        <li>
-            Photo by Teemu Paananen on Unsplash 
-https://unsplash.com/photos/OOE4xAnBhKo?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink
-
-        </li>
-        <li>Photo by Meg Jerrard on Unsplash 
-            https://unsplash.com/photos/E1UfNaIQMSY?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink
-            </li>
-        <li>Photo by Jairo Alzate on Unsplash 
-            https://unsplash.com/photos/L-pkb93pBP8?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText
-            </li>
-        <li>Photo by Steffen Triekels on Unsplash 
-            https://unsplash.com/photos/iA7MJIuyMXA?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink
-            </li>
-        <li>Photo by eberhard 🖐 grossgasteiger on Unsplash 
-            https://unsplash.com/photos/S-2Ukb_VqpA?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink
-            </li>
-        <li>Photo by Yegor Denisov on Unsplash 
-            https://unsplash.com/photos/ZCt2ayQCre8?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink
-            </li>
+            <li>Photo of<a href="https://unsplash.com/@eberhardgross?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">eberhard 🖐 grossgasteiger</a> in <a href="https://unsplash.com/es/fotos/XAxEp-NKBiQ?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></li>
+            <li>Photo of<a href="https://unsplash.com/@gbodin?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">G B</a> in <a href="https://unsplash.com/es/fotos/_kJBNgNhlg4?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></li>
+            <li>Photo by Artem Lysenko: https://www.pexels.com/photo/white-fish-under-water-2168831/</li>
+            <li>Photo of <a href="https://unsplash.com/@cedric_photography?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Cédric VT</a> in <a href="https://unsplash.com/es/fotos/IuJc2qh2TcA?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></li>
+            <li>Photo of <a href="https://unsplash.com/@danesduet?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Daniel Olah</a> in <a href="https://unsplash.com/es/fotos/pCcGpVsOHoo?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></li>
+            <li>Photo of <a href="https://unsplash.com/@impatrickt?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Patrick Tomasso</a> in <a href="https://unsplash.com/es/fotos/QMDap1TAu0g?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></li>
+            <li>Photo of <a href="https://unsplash.com/@luk10?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Lukas Tennie</a> in <a href="https://unsplash.com/es/fotos/23A5RimlfXs?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></li>
+            <li>Photo of <a href="https://unsplash.com/@xteemu?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Teemu Paananen</a> in <a href="https://unsplash.com/es/fotos/OOE4xAnBhKo?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></li>
+            <li>Photo of <a href="https://unsplash.com/@mappingmegantravel?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Meg Jerrard</a> in <a href="https://unsplash.com/es/fotos/E1UfNaIQMSY?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></li>
+            <li>Photo of <a href="https://unsplash.com/@jairoalzate?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Jairo Alzate</a> in <a href="https://unsplash.com/es/fotos/L-pkb93pBP8?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></li>
+            <li>Photo of <a href="https://unsplash.com/ja/@revoyne?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Steffen Triekels</a> in <a href="https://unsplash.com/es/fotos/iA7MJIuyMXA?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></li>
+            <li>Photo of <a href="https://unsplash.com/@eberhardgross?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">eberhard 🖐 grossgasteiger</a> in <a href="https://unsplash.com/es/fotos/S-2Ukb_VqpA?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></li>
+            <li>Foto de <a href="https://unsplash.com/fr/@yegordenisov?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Yegor Denisov</a> en <a href="https://unsplash.com/es/fotos/ZCt2ayQCre8?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></li>
        </ul>
     </section>
 
