--- a/contact-us.html
+++ b/contact-us.html
@@ -46,7 +46,8 @@
     <section class="container">
         <form action="https://formsubmit.co/74393923f876561c1f04e3cb3e63faea" method="POST">
         <div class="column1">
-            
+          <input type="text" name="_honey" style="display: none;">
+           <input type="text" name="_captcha" value="false"> 
             <label for="fname">First Name</label>
             <input type="text" id="firstname" name="name" placeholder="Your name" required>
            
